--- a/app/src/main/res/layout/fragment_adauga.xml
+++ b/app/src/main/res/layout/fragment_adauga.xml
@@ -125,9 +125,14 @@
             android:layout_marginVertical="15dp"
             android:background="@drawable/background_rotunjit"
             android:backgroundTint="@color/fundal_alt"
+            android:gravity="top|start"
             android:hint="Adaugă o descriere"
-            android:inputType="text"
+            android:inputType="textMultiLine"
+            android:lines="8"
+            android:maxLines="10"
+            android:minLines="3"
             android:padding="15dp"
+            android:scrollbars="vertical"
             android:textColor="@color/text"
             android:textSize="@dimen/text_standard" />
 
