--- a/app/src/main/res/layout/layout_banner_solicitare.xml
+++ b/app/src/main/res/layout/layout_banner_solicitare.xml
@@ -4,7 +4,8 @@
     android:id="@+id/banner_solicitare_relativeLayoutContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp"
+    android:layout_marginHorizontal="15dp"
+    android:layout_marginBottom="15dp"
     android:background="@drawable/background_rotunjit"
     android:backgroundTint="@color/fundal_alt"
     android:padding="10dp">
