--- a/app/src/main/res/layout/layout_licenta.xml
+++ b/app/src/main/res/layout/layout_licenta.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical">
 
     <ScrollView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:background="@color/white">
 
         <LinearLayout
             android:id="@+id/licenta_linearLayout"
-            android:layout_width="match_parent"
+            android:layout_width="800dp"
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:orientation="vertical"
-            android:padding="20dp">
+            android:padding="50dp">
 
             <ImageView
                 android:layout_width="50dp"
@@ -39,7 +39,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="50dp"
                 android:text="Numărul de contract"
                 android:textColor="@color/text"
                 android:textSize="@dimen/text_standard"
@@ -57,8 +57,8 @@
             <TextView
                 android:id="@+id/licenta_textViewIntroducereArtist"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_height="150dp"
+                android:layout_marginTop="30dp"
                 android:text="Introducere artist"
                 android:textColor="@color/text"
                 android:textSize="@dimen/text_standard" />
@@ -67,7 +67,7 @@
             <TextView
                 android:id="@+id/licenta_textViewIntroducereBeneficiar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="150dp"
                 android:layout_marginTop="20dp"
                 android:text="Introducere artist"
                 android:textColor="@color/text"
@@ -86,7 +86,7 @@
             <TextView
                 android:id="@+id/licenta_textViewConditii"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="300dp"
                 android:text="Condiții"
                 android:textColor="@color/text"
                 android:textSize="@dimen/text_standard" />
